NULL =

C_app_json = \
	C/apps/content.json \
	$(NULL)

C_app_images = \
	C/apps/resources/images/billard-gl-featured.jpg \
	C/apps/resources/images/blockout2-featured.jpg \
	C/apps/resources/images/chromium-bsu-featured.jpg \
	C/apps/resources/images/english-featured.jpg \
	C/apps/resources/images/gimp-featured.jpg \
	C/apps/resources/images/khanacademy-featured.jpg \
	C/apps/resources/images/libreoffice-calc-featured.jpg \
	C/apps/resources/images/libreoffice-impress-featured.jpg \
	C/apps/resources/images/libreoffice-writer-featured.jpg \
	C/apps/resources/images/numptyphysics-featured.jpg \
	C/apps/resources/images/photos-featured.jpg \
	C/apps/resources/images/rhythmbox-featured.jpg \
	C/apps/resources/images/shotwell-featured.jpg \
	C/apps/resources/images/skype-featured.jpg \
	C/apps/resources/images/supertux2-featured.jpg \
	C/apps/resources/images/supertuxkart-featured.jpg \
	C/apps/resources/images/teeworlds-featured.jpg \
	C/apps/resources/images/translate-featured.jpg \
	C/apps/resources/images/weather-featured.jpg \
	C/apps/resources/images/wikipedia-featured.jpg \
	C/apps/resources/images/youtube-featured.jpg \
	$(NULL)

C_app_thumbnails = \
	C/apps/resources/thumbnails/armagetron-thumb.jpg \
	C/apps/resources/thumbnails/audacity-thumb.jpg \
	C/apps/resources/thumbnails/billard-gl-thumb.jpg \
	C/apps/resources/thumbnails/blockout2-thumb.jpg \
	C/apps/resources/thumbnails/chromium-bsu-thumb.jpg \
	C/apps/resources/thumbnails/english-thumb.jpg \
	C/apps/resources/thumbnails/evolution-thumb.jpg \
	C/apps/resources/thumbnails/frostwire-thumb.jpg \
	C/apps/resources/thumbnails/gcalctool-thumb.jpg \
	C/apps/resources/thumbnails/gcompris-thumb.jpg \
	C/apps/resources/thumbnails/gimp-thumb.jpg \
	C/apps/resources/thumbnails/gnome-genius-thumb.jpg \
	C/apps/resources/thumbnails/gnome-sudoku-thumb.jpg \
	C/apps/resources/thumbnails/goldendict-thumb.jpg \
	C/apps/resources/thumbnails/khanacademy-thumb.jpg \
	C/apps/resources/thumbnails/kobodeluxe-thumb.jpg \
	C/apps/resources/thumbnails/lbreakout2-thumb.jpg \
	C/apps/resources/thumbnails/libreoffice-calc-thumb.jpg \
	C/apps/resources/thumbnails/libreoffice-impress-thumb.jpg \
	C/apps/resources/thumbnails/libreoffice-writer-thumb.jpg \
	C/apps/resources/thumbnails/numptyphysics-thumb.jpg \
	C/apps/resources/thumbnails/openarena-thumb.jpg \
	C/apps/resources/thumbnails/photos-thumb.jpg \
	C/apps/resources/thumbnails/pingus-thumb.jpg \
	C/apps/resources/thumbnails/rhythmbox-thumb.jpg \
	C/apps/resources/thumbnails/shotwell-thumb.jpg \
	C/apps/resources/thumbnails/skype-thumb.jpg \
	C/apps/resources/thumbnails/solitaire-thumb.jpg \
	C/apps/resources/thumbnails/sol-thumb.jpg \
	C/apps/resources/thumbnails/stellarium-thumb.jpg \
	C/apps/resources/thumbnails/supertux2-thumb.jpg \
	C/apps/resources/thumbnails/supertuxkart-thumb.jpg \
	C/apps/resources/thumbnails/teeworlds-thumb.jpg \
	C/apps/resources/thumbnails/_thumb.jpg \
	C/apps/resources/thumbnails/totem-thumb.jpg \
	C/apps/resources/thumbnails/translate-thumb.jpg \
	C/apps/resources/thumbnails/tuxmath-thumb.jpg \
	C/apps/resources/thumbnails/tuxtype-thumb.jpg \
	C/apps/resources/thumbnails/weather-thumb.jpg \
	C/apps/resources/thumbnails/wikipedia-thumb.jpg \
	C/apps/resources/thumbnails/youtube-thumb.jpg \
	$(NULL)

contentdir = $(datadir)/application-store
nobase_content_DATA = \
	$(C_app_json) \
	$(C_app_images) \
	$(C_app_thumbnails) \
	$(NULL)
