NULL =
EXTRA_DIST =
CLEANFILES =
DISTCLEANFILES =

default_app_json = \
	Default/apps/content.json \
	$(NULL)

EXTRA_DIST += $(default_app_json)

default_links_json = \
	Default/links/content.json \
	$(NULL)

EXTRA_DIST += $(default_links_json)

default_app_images = \
	Default/apps/resources/images/billard-gl-featured.jpg \
	Default/apps/resources/images/blockout2-featured.jpg \
	Default/apps/resources/images/brazil-featured.jpg \
	Default/apps/resources/images/chromium-bsu-featured.jpg \
	Default/apps/resources/images/english-featured.jpg \
	Default/apps/resources/images/gimp-featured.jpg \
	Default/apps/resources/images/health-featured.jpg \
	Default/apps/resources/images/khanacademy-featured.jpg \
	Default/apps/resources/images/libreoffice-calc-featured.jpg \
	Default/apps/resources/images/libreoffice-impress-featured.jpg \
	Default/apps/resources/images/libreoffice-writer-featured.jpg \
	Default/apps/resources/images/numptyphysics-featured.jpg \
	Default/apps/resources/images/photos-featured.jpg \
	Default/apps/resources/images/programming-featured.jpg \
	Default/apps/resources/images/rhythmbox-featured.jpg \
	Default/apps/resources/images/resume-featured.jpg \
	Default/apps/resources/images/shotwell-featured.jpg \
	Default/apps/resources/images/skype-featured.jpg \
	Default/apps/resources/images/supertux2-featured.jpg \
	Default/apps/resources/images/supertuxkart-featured.jpg \
	Default/apps/resources/images/teeworlds-featured.jpg \
	Default/apps/resources/images/translate-featured.jpg \
	Default/apps/resources/images/typing-featured.jpg \
	Default/apps/resources/images/weather-featured.jpg \
	Default/apps/resources/images/wikipedia-featured.jpg \
	Default/apps/resources/images/youtube-featured.jpg \
	$(NULL)

EXTRA_DIST += $(default_app_images)

default_app_thumbnails = \
	Default/apps/resources/thumbnails/armagetron-thumb.jpg \
	Default/apps/resources/thumbnails/audacity-thumb.jpg \
	Default/apps/resources/thumbnails/billard-gl-thumb.jpg \
	Default/apps/resources/thumbnails/blockout2-thumb.jpg \
	Default/apps/resources/thumbnails/brazil-thumb.jpg \
	Default/apps/resources/thumbnails/chromium-bsu-thumb.jpg \
	Default/apps/resources/thumbnails/english-thumb.jpg \
	Default/apps/resources/thumbnails/evolution-thumb.jpg \
	Default/apps/resources/thumbnails/frostwire-thumb.jpg \
	Default/apps/resources/thumbnails/gcalctool-thumb.jpg \
	Default/apps/resources/thumbnails/gcompris-thumb.jpg \
	Default/apps/resources/thumbnails/gimp-thumb.jpg \
	Default/apps/resources/thumbnails/gnome-genius-thumb.jpg \
	Default/apps/resources/thumbnails/gnome-sudoku-thumb.jpg \
	Default/apps/resources/thumbnails/goldendict-thumb.jpg \
	Default/apps/resources/thumbnails/health-thumb.jpg \
	Default/apps/resources/thumbnails/khanacademy-thumb.jpg \
	Default/apps/resources/thumbnails/kobodeluxe-thumb.jpg \
	Default/apps/resources/thumbnails/lbreakout2-thumb.jpg \
	Default/apps/resources/thumbnails/libreoffice-calc-thumb.jpg \
	Default/apps/resources/thumbnails/libreoffice-impress-thumb.jpg \
	Default/apps/resources/thumbnails/libreoffice-writer-thumb.jpg \
	Default/apps/resources/thumbnails/numptyphysics-thumb.jpg \
	Default/apps/resources/thumbnails/openarena-thumb.jpg \
	Default/apps/resources/thumbnails/photos-thumb.jpg \
	Default/apps/resources/thumbnails/pingus-thumb.jpg \
	Default/apps/resources/thumbnails/programming-thumb.jpg \
	Default/apps/resources/thumbnails/resume-thumb.jpg \
	Default/apps/resources/thumbnails/rhythmbox-thumb.jpg \
	Default/apps/resources/thumbnails/shotwell-thumb.jpg \
	Default/apps/resources/thumbnails/skype-thumb.jpg \
	Default/apps/resources/thumbnails/solitaire-thumb.jpg \
	Default/apps/resources/thumbnails/sol-thumb.jpg \
	Default/apps/resources/thumbnails/stellarium-thumb.jpg \
	Default/apps/resources/thumbnails/supertux2-thumb.jpg \
	Default/apps/resources/thumbnails/supertuxkart-thumb.jpg \
	Default/apps/resources/thumbnails/teeworlds-thumb.jpg \
	Default/apps/resources/thumbnails/totem-thumb.jpg \
	Default/apps/resources/thumbnails/translate-thumb.jpg \
	Default/apps/resources/thumbnails/tuxmath-thumb.jpg \
	Default/apps/resources/thumbnails/tuxtype-thumb.jpg \
	Default/apps/resources/thumbnails/weather-thumb.jpg \
	Default/apps/resources/thumbnails/wikipedia-thumb.jpg \
	Default/apps/resources/thumbnails/youtube-thumb.jpg \
	$(NULL)

EXTRA_DIST += $(default_app_thumbnails)

default_app_screenshots = \
	Default/apps/resources/screenshots/gimp-screenshot-1.png \
	Default/apps/resources/screenshots/gimp-screenshot-2.png \
	$(NULL)

EXTRA_DIST += $(default_app_screenshots)

default_links_images = \
	Default/links/images/abril.jpg \
	Default/links/images/acciontrabajo.jpg \
	Default/links/images/adoro_cinema.jpg \
	Default/links/images/afroreggae.jpg \
	Default/links/images/arena.jpg \
	Default/links/images/around_antigua.jpg \
	Default/links/images/as_boas_novas.jpg \
	Default/links/images/band_news.jpg \
	Default/links/images/barca.jpg \
	Default/links/images/bodyboard.jpg \
	Default/links/images/bola_nas_costas.jpg \
	Default/links/images/botafogo.jpg \
	Default/links/images/brasil_escola.jpg \
	Default/links/images/brasileirao.jpg \
	Default/links/images/canal_3.jpg \
	Default/links/images/canal_7.jpg \
	Default/links/images/canal_antigua.jpg \
	Default/links/images/cartola_fc.png \
	Default/links/images/catho.jpg \
	Default/links/images/cbf.jpg \
	Default/links/images/champions_league.jpg \
	Default/links/images/cinema.jpg \
	Default/links/images/clima_tempo.jpg \
	Default/links/images/club_de_futbol_comunicaciones.jpg \
	Default/links/images/club_de_futbol_heredia_jaguares.jpg \
	Default/links/images/cnn.jpg \
	Default/links/images/codecademy.jpg \
	Default/links/images/computrabajo.jpg \
	Default/links/images/conred.jpg \
	Default/links/images/contra_dengue.jpg \
	Default/links/images/copa_2014.jpg \
	Default/links/images/csd_municipal.jpg \
	Default/links/images/curriculo_online.jpg \
	Default/links/images/curriculum.jpg \
	Default/links/images/deguate.jpg \
	Default/links/images/delas_ig.jpg \
	Default/links/images/delegacia.jpg \
	Default/links/images/deportivo_coatepeque.jpg \
	Default/links/images/deportivo_iztapa.jpg \
	Default/links/images/deportivo_marquense.jpg \
	Default/links/images/detran.jpg \
	Default/links/images/diario_la_hora.jpg \
	Default/links/images/discovery_channel.jpg \
	Default/links/images/discovery_kids.jpg \
	Default/links/images/disque_denuncia.jpg \
	Default/links/images/duolingo.jpg \
	Default/links/images/ego.jpg \
	Default/links/images/el_pais.jpg \
	Default/links/images/el_periodico.jpg \
	Default/links/images/emisoras_unidas.jpg \
	Default/links/images/empregabilidade.jpg \
	Default/links/images/emprego_certo.jpg \
	Default/links/images/empregos_rj.jpg \
	Default/links/images/espn.jpg \
	Default/links/images/espndeportes.jpg \
	Default/links/images/explorando_guatemala.jpg \
	Default/links/images/extra.jpg \
	Default/links/images/f1.jpg \
	Default/links/images/facebook.jpg \
	Default/links/images/fifa.jpg \
	Default/links/images/flamengo.jpg \
	Default/links/images/fluminense.jpg \
	Default/links/images/folha_de_sao_paulo.jpg \
	Default/links/images/fox_sport.jpg \
	Default/links/images/fox_sports.jpg \
	Default/links/images/futbol_de_guatemala.jpg \
	Default/links/images/galas_de_guatemala.jpg \
	Default/links/images/gcompris.jpg \
	Default/links/images/ge-tv.jpg \
	Default/links/images/globo.com.jpg \
	Default/links/images/globo_esporte.jpg \
	Default/links/images/globo_news.jpg \
	Default/links/images/gnt.jpg \
	Default/links/images/gnt_moda.jpg \
	Default/links/images/google_art_project.jpg \
	Default/links/images/google_books.jpg \
	Default/links/images/google_news.jpg \
	Default/links/images/guate360.jpg \
	Default/links/images/guate_en_los_80s.jpg \
	Default/links/images/guate_es_calida.jpg \
	Default/links/images/guatevision.jpg \
	Default/links/images/hacer_cine_en_guatemala.jpg \
	Default/links/images/hagalo_usted_mismo.jpg \
	Default/links/images/inea.jpg \
	Default/links/images/infojobs.jpg \
	Default/links/images/inguat.jpg \
	Default/links/images/khan_academy.jpg \
	Default/links/images/kibe_loco.jpg \
	Default/links/images/klogo.jpg \
	Default/links/images/malacateco.jpg \
	Default/links/images/malacates.jpg \
	Default/links/images/map.jpg \
	Default/links/images/meia_hora.jpg \
	Default/links/images/mercado_livre.jpg \
	Default/links/images/ministerio_de_educacion.jpg \
	Default/links/images/moda_ig.jpg \
	Default/links/images/moda_yahoo.jpg \
	Default/links/images/mspas.jpg \
	Default/links/images/mundo_chapin.jpg \
	Default/links/images/national_geographic.jpg \
	Default/links/images/nba.jpg \
	Default/links/images/nbb.jpg \
	Default/links/images/news_senate.jpg \
	Default/links/images/noti7.jpg \
	Default/links/images/noticias_de_governo.jpg \
	Default/links/images/noticias_senado.jpg \
	Default/links/images/novelas_yahoo!.jpg \
	Default/links/images/o_dia.jpg \
	Default/links/images/olhar_digital.jpg \
	Default/links/images/omelete.jpg \
	Default/links/images/omg_yahoo.jpg \
	Default/links/images/opcionempleo.jpg \
	Default/links/images/orkut.jpg \
	Default/links/images/osar.jpg \
	Default/links/images/plano_de_saude_online.jpg \
	Default/links/images/portal_da_saude.jpg \
	Default/links/images/poupa_tempo.jpg \
	Default/links/images/prensa_libre.jpg \
	Default/links/images/quizlet.jpg \
	Default/links/images/r7.jpg \
	Default/links/images/radios_de_guatemala.jpg \
	Default/links/images/real_madrid.jpg \
	Default/links/images/revista_chicos.jpg \
	Default/links/images/revista_saude.jpg \
	Default/links/images/rio_2016.jpg \
	Default/links/images/rio_turismo_radical.jpg \
	Default/links/images/rio_vagas.jpg \
	Default/links/images/rio_vestibular.jpg \
	Default/links/images/rioshow.jpg \
	Default/links/images/rjtv.jpg \
	Default/links/images/rock_chapin.jpg \
	Default/links/images/seguros.jpg \
	Default/links/images/senac.jpg \
	Default/links/images/senado_federal.jpg \
	Default/links/images/siglo_veintiuno.jpg \
	Default/links/images/sistema_de_becas.jpg \
	Default/links/images/site_da_baixada.jpg \
	Default/links/images/somos_guatemala.jpg \
	Default/links/images/sportv.jpg \
	Default/links/images/suchitepequez.jpg \
	Default/links/images/superliga.jpg \
	Default/links/images/surf.jpg \
	Default/links/images/tecoloco.jpg \
	Default/links/images/ted.jpg \
	Default/links/images/tedx_rio+20_2010.jpg \
	Default/links/images/tedx_rio_2011.jpg \
	Default/links/images/tedxguatemala_2012.jpg \
	Default/links/images/telediario.jpg \
	Default/links/images/telefones_uteis.jpg \
	Default/links/images/telemundo.jpg \
	Default/links/images/teleton_guatemala.jpg \
	Default/links/images/terra.jpg \
	Default/links/images/toditolaboral.jpg \
	Default/links/images/tryscience.jpg \
	Default/links/images/tv_&_novelas_ig.jpg \
	Default/links/images/twitter.jpg \
	Default/links/images/uefa.jpg \
	Default/links/images/ultimo_segundo.jpg \
	Default/links/images/universidad_de_san_carlos_de_guatemala.jpg \
	Default/links/images/universidad_del_istmo.jpg \
	Default/links/images/universidad_del_valle_de_guatemala.jpg \
	Default/links/images/universidad_francisco_marroquin.jpg \
	Default/links/images/universidad_mariano_galvez.jpg \
	Default/links/images/universidad_rafael_landivar.jpg \
	Default/links/images/universidad_rural.jpg \
	Default/links/images/univision.jpg \
	Default/links/images/uol_jogos.jpg \
	Default/links/images/upa.jpg \
	Default/links/images/upp_reporter.jpg \
	Default/links/images/vasco.jpg \
	Default/links/images/verduca.png \
	Default/links/images/viaje_a_guatemala.jpg \
	Default/links/images/viva_favela.jpg \
	Default/links/images/viva_rio.jpg \
	Default/links/images/viva_rocinha.jpg \
	Default/links/images/voz_das_comunidades.jpg \
	Default/links/images/wikipedia.jpg \
	Default/links/images/world_cup_2014.jpg \
	Default/links/images/xelaju_mc.jpg \
	Default/links/images/yo_asumo.jpg \
	Default/links/images/youtube.jpg \
	Default/links/images/zap_empregos.jpg \
	$(NULL)

EXTRA_DIST += $(default_links_images)

# extract-content-strings is a small utility that runs on the build system
extract_content_strings_sources = $(top_srcdir)/tools/extract-content-strings.c
extract_content_strings_cflags = $(EOS_APP_STORE_CFLAGS) $(MAINTAINER_CFLAGS)
extract_content_strings_ldadd = $(EOS_APP_STORE_LIBS)

extract-content-strings$(BUILD_EXEEXT): $(extract_content_strings_sources)
	@rm -f extract-content-strings$(BUILD_EXEEXT)
	$(AM_V_CCLD)$(CC) $(AM_CFLAGS) $(extract_content_strings_cflags) $^ $(extract_content_strings_ldadd) -o $@

DISTCLEANFILES += extract-content-strings$(BUILD_EXEEXT)

content_files = $(default_app_json) $(default_links_json)
content_headers = $(content_files:.json=.json.h)
%.json.h: $(content_files) extract-content-strings$(BUILD_EXEEXT)
	$(AM_V_GEN) ./extract-content-strings$(BUILD_EXEEXT) $< > $@

noinst_DATA = $(content_headers)
DISTCLEANFILES += $(content_headers)

contentdir = $(datadir)/application-store
nobase_content_DATA = \
	$(default_app_json) \
	$(default_app_images) \
	$(default_app_thumbnails) \
	$(default_app_screenshots) \
	$(default_links_json) \
	$(default_links_images) \
	$(NULL)
