appdir = $(pythondir)/EosAppStore/add_shortcuts_module
app_PYTHON = \
	__init__.py \
	add_application_box.py \
	add_folder_box.py \
	add_shortcuts_model.py \
	add_shortcuts_presenter.py \
	add_shortcuts_view.py \
	add_website_box.py \
	application_row_box.py \
	name_format_util.py \
	shortcut_category_box.py \
	shortcut_category.py \
	website_row_box.py \
	$(NULL)
