appdir = $(pythondir)/EosAppStore/application_store
app_PYTHON = \
	__init__.py \
	application_store_errors.py \
	application_store_model.py \
	application_store_presenter.py \
	application_store_view.py \
	categories_model.py \
	category_model.py \
	installed_applications_model.py \
	recommended_sites_provider.py \
	$(NULL)
