appdir = $(pythondir)/EosAppStore/osapps
app_PYTHON = \
	__init__.py \
	ad_connection.py \
	app_datastore.py \
	app_launcher.py \
	app.py \
	app_shortcut.py \
	app_util.py \
	desktop_filetype_util.py \
	desktop_locale_datastore.py \
	desktop_preferences_datastore.py \
	display_provider.py \
	file_app_associator.py \
	home_path_provider.py \
	launchable_app.py \
	os_util.py \
	shortcuts.py \
	xlib_helper.py \
	$(NULL)
