appdir = $(pythondir)/EosAppStore/util
app_PYTHON = \
	__init__.py \
	background_task.py \
	dbus_utils.py \
	file_util.py \
	label_util.py \
	rename_widget_constants.py \
	rename_widget_model.py \
	rename_widget_presenter.py \
	rename_widget.py \
	rename_widget_view.py \
	shadowed_label_box.py \
	$(NULL)
